--- a/src/global.css
+++ b/src/global.css
@@ -33,6 +33,7 @@ body {
 }
 
 .cy_header {
+  border-bottom: 1px solid #9f9f9f99;
   background-color: #ffffff;
   color: #000;
   height: 10vh;
@@ -126,19 +127,20 @@ body {
 
 .cy_main_cont {
   height: 100%;
-  min-width: 80%;
-  width: auto;
-  display: grid;
+  width: 100%;
+  /* width: auto; */
+  columns: 360px;
+  /* display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-auto-rows: 250px;
   justify-items: center;
   align-items: start;
   row-gap: 20px;
-  column-gap: 20px;
+  column-gap: 20px; */
   padding: 40px 60px;
 }
 
-@media screen and (max-width: 739px) {
+@media screen and (max-width: 855px) {
   .cy_main_cont {
     display: flex;
     flex-direction: column;
@@ -150,6 +152,7 @@ body {
 .cy_note {
   border: 1px solid #cdcdcdbd;
   border-radius: 7px;
+  margin: 20px;
   padding: 24px;
   max-height: 370px;
   min-height: 200px;
@@ -160,7 +163,7 @@ body {
   justify-content: space-between;
   align-items: start;
   overflow: hidden;
-  cursor: pointer;
+  /* cursor: pointer; */
   transition: all ease-in-out 300ms;
 }
 
@@ -200,43 +203,66 @@ body {
 }
 
 .cy_note_time {
-  height: 30px;
+  height: 40px;
   width: 100%;
   display: flex;
-  justify-content: flex-end;
-  align-items: end;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.cy_note_del {
+  border: 1px solid #cdcdcdbd;
+  border-radius: 6px;
+  background-color: #ff0000;
+  color: #fff;
+  padding: 3px 15px;
+  font-size: 12px;
+  font-weight: 900;
+  cursor: pointer;
+  opacity: 0;
+  transition: all ease-in-out 200ms;
+  transition-delay: 0ms;
+}
+
+.cy_note:hover .cy_note_del {
+  opacity: 1;
+  transition: all ease-in-out 300ms;
+  transition-delay: 500ms;
+}
+
+.cy_time {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 13px;
 }
 
-.cy_note_time p {
+.cy_time p {
   color: #292929;
   font-size: 13px;
   font-weight: 900;
 }
 
 .cy_add_panel {
-  border-top: 1px solid #9f9f9f99;
   background-color: transparent;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  margin-top: 10vh;
-  /* padding: 30px; */
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  z-index: 1;
 }
 
 .cy_add_cont {
-  /* border: 1px solid #cdcdcdbd;
-  border-radius: 14px; */
   border-inline: 1px solid #cdcdcdbd;
   border-bottom: 1px solid #cdcdcdbd;
-  border-bottom-left-radius: 14px;
-  border-bottom-right-radius: 14px;
+  border-bottom-left-radius: 9px;
+  border-bottom-right-radius: 9px;
   background: #ffffffc9;
+  margin-top: 10vh;
   position: fixed;
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
@@ -246,11 +272,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* overflow: hidden; */
+  z-index: 2;
 }
 
 .cy_add_inputs {
-  /* background-color: #cacaca; */
-  height: 80%;
+  height: 85%;
   width: 100%;
   padding: 24px;
 }
@@ -297,6 +324,72 @@ body {
 }
 
 .cy_add_feature {
-  height: 10%;
+  height: 15%;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 30px;
+}
+
+.cy_feature {
+  border: 1px solid #cdcdcd8f;
+  border-radius: 4px;
+  padding: 4px 11px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  transition: all ease-in-out 200ms;
+}
+
+.cy_feature::before {
+  /* content: "Color"; */
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.46);
+  color: #ffffff;
+  font-size: 12px;
+  height: 23px;
+  width: 50px;
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  position: absolute;
+  top: 120%;
+  left: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: all ease-in-out 200ms;
+}
+
+.cy_feature:hover::before {
+  opacity: 1;
+  transition: all ease-in-out 200ms;
+}
+
+.cy_color_feature::before {
+  content: "Color";
+}
+
+.cy_archive_feature::before {
+  content: "Archive";
+}
+
+.cy_save_feature::before {
+  content: "Save";
+}
+
+.cy_other_feautres {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.cy_of_div {
+  background-color: #cdcdcd8f;
+  height: 17px;
+  width: 1px;
 }
