--- a/src/global.css
+++ b/src/global.css
@@ -126,18 +126,19 @@ body {
 }
 
 .cy_main_cont {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   /* width: auto; */
-  columns: 360px;
-  /* display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  grid-auto-rows: 250px;
-  justify-items: center;
-  align-items: start;
-  row-gap: 20px;
-  column-gap: 20px; */
-  padding: 40px 60px;
+  /* columns: 360px; */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  grid-auto-rows: 200px;
+  grid-auto-flow: dense;
+  gap: 20px;
+  column-gap: 20px;
+  padding: 40px;
+  padding-bottom: 100px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 855px) {
@@ -152,19 +153,24 @@ body {
 .cy_note {
   border: 1px solid #cdcdcdbd;
   border-radius: 7px;
+  break-inside: avoid;
   margin: 20px;
   padding: 24px;
   max-height: 370px;
   min-height: 200px;
-  width: 350px;
+  /* width: 350px; */
+  width: 100%;
   box-shadow: 4px 4px 5px 0px #dcdcdc63;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: start;
   overflow: hidden;
-  /* cursor: pointer; */
   transition: all ease-in-out 300ms;
+}
+
+.cy_note:nth-child(even) {
+  margin-top: 60px;
 }
 
 .cy_note:hover {
