--- a/src/global.css
+++ b/src/global.css
@@ -160,22 +160,45 @@ body {
   min-height: 200px;
   /* width: 350px; */
   width: 100%;
-  box-shadow: 4px 4px 5px 0px #dcdcdc63;
+  box-shadow: 4px 4px 5px 0px #dcdcdc23;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: start;
   overflow: hidden;
-  transition: all ease-in-out 300ms;
-}
-
-.cy_note:nth-child(even) {
-  margin-top: 60px;
+  transition: all ease-in-out 200ms;
 }
 
 .cy_note:hover {
   border: 1px solid #a9a9a9bd;
   box-shadow: 4px 4px 5px 0px #dcdcdcb6;
+}
+
+.cy_note:focus-within {
+  border: 2px solid #a8a7a7bd;
+  animation: shake 300ms ease-in-out;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-3px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-3px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.cy_note:nth-child(even) {
+  margin-top: 60px;
 }
 
 .cy_note_write {
@@ -211,13 +234,13 @@ body {
 .cy_note_title[contenteditable],
 .cy_note_content[contenteditable] {
   border: 2px solid transparent;
-  border-radius: 7px;
+  border-radius: 5px;
   padding: 5px;
 }
 
 .cy_note_title[contenteditable]:focus,
 .cy_note_content[contenteditable]:focus {
-  border-color: #848484;
+  border-color: #797979b8;
   outline: none;
 }
 
