--- a/src/global.css
+++ b/src/global.css
@@ -323,7 +323,7 @@ body {
   z-index: 2;
 }
 
-@media screen and (max-width: 391px) and (max-height: 845px) {
+@media screen and (max-width: 846px) {
   .a_n_btn {
     padding: 7.5px 15px;
   }
@@ -347,6 +347,7 @@ body {
   .cy_add_cont {
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
+    margin-top: 5vh;
     height: 1000px;
     width: 100vw;
   }
