--- a/src/global.css
+++ b/src/global.css
@@ -347,7 +347,8 @@ body {
   .cy_add_cont {
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
-    margin-top: 5vh;
+    background-color: #fff;
+    margin-top: 10vh;
     height: 1000px;
     width: 100vw;
   }
